--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/gson-2.10.1.jar"/>
 	<classpathentry kind="lib" path="lib/json-20231013.jar"/>
+	<classpathentry kind="lib" path="lib/jakarta.xml.bind-api-4.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
