--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,30 @@
-# Compiled class file
-*.class
+### OS ###
+.DS_Store
+Thumbs.db
 
-# Log file
+### Java ###
+*.class
+*.jar
+*.war
+*.ear
+
+### Logs ###
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
 # Package Files #
-*.war
 *.nar
-*.ear
 *.zip
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
-/bin
+### Eclipse ###
+.project
+.classpath
+.settings/
+bin/
+tmp/
+
+### Maven ###
+target/
+!.mvn/wrapper/maven-wrapper.jar
+.mvn/wrapper/maven-wrapper.properties
